Rewrite of the rules to meet new spec.  Complete restyle using bootstrap.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -7,3 +7,5 @@ play.http.parser.maxMemoryBuffer=1024k
 # For upload large file
 # https://www.playframework.com/documentation/2.7.x/ScalaBodyParsers#Max-content-length
 play.http.parser.maxDiskBuffer=1g
+
+play.http.secret.key="CKCwJwha_ZOZXT2JaSR65Vw[rMt`Rn4;u7oE3Xonfi@cIU>c9;XF<mu]WRr758EP"
