Added an initial export facility - still needs to allow user to select a file location.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -9,3 +9,6 @@ play.http.parser.maxMemoryBuffer=1024k
 play.http.parser.maxDiskBuffer=1g
 
 play.http.secret.key="CKCwJwha_ZOZXT2JaSR65Vw[rMt`Rn4;u7oE3Xonfi@cIU>c9;XF<mu]WRr758EP"
+
+# Temp solution to the problem of specifying the target path when exporting the results
+export.basePath="C:\\Orienteering\\"
